# mcp-keycloak

./: Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
scripts/: run_server.sh
src/: main.py
src/tools/: __init__.py  keycloak_client.py
