[project]
name = "mcp-keycloak"
version = "1.2.2"
description = "MCP server for Keycloak administration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.3",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
]

[project.scripts]
mcp-keycloak = "mcp_keycloak.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src" = "mcp_keycloak"

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
